WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158284
[iOS] Regression(
r200972
): Crash under WebKit::WebPage::selectTextWithGranularityAtPoint()
https://bugs.webkit.org/show_bug.cgi?id=158284
Summary
[iOS] Regression(r200972): Crash under WebKit::WebPage::selectTextWithGranula...
Chris Dumez
Reported
2016-06-01 16:48:24 PDT
Regression(
r200972
): Crash under WebKit::WebPage::selectTextWithGranularityAtPoint(): Thread 0 Crashed ↩: 0 WebKit 0x0000000192eae46c WebKit::WebPage::selectTextWithGranularityAtPoint(WebCore::IntPoint const&, unsigned int, bool, unsigned long long) + 128 (RefPtr.h:63) 1 WebKit 0x0000000192eae444 WebKit::WebPage::selectTextWithGranularityAtPoint(WebCore::IntPoint const&, unsigned int, bool, unsigned long long) + 88 (WebPageIOS.mm:1873) 2 WebKit 0x0000000192ebe628 void IPC::handleMessage<Messages::WebPage::SelectTextWithGranularityAtPoint, WebKit::WebPage, void (WebKit::WebPage::*)(WebCore::IntPoint const&, unsigned int, bool, unsigned long long)>(IPC::MessageDecoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebCore::IntPoint const&, unsigned int, bool, unsigned long long)) + 76 (HandleMessage.h:22) 3 WebKit 0x0000000192da107c IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::MessageDecoder&) + 120 (MessageReceiverMap.cpp:102) 4 WebKit 0x0000000192f130fc WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::MessageDecoder&) + 36 (WebProcess.cpp:624) 5 WebKit 0x0000000192d67890 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >) + 160 (Connection.cpp:899) 6 WebKit 0x0000000192d6a278 IPC::Connection::dispatchOneMessage() + 204 (Connection.cpp:961) 7 JavaScriptCore 0x000000018e04d3ec WTF::RunLoop::performWork() + 452 (functional:1817) 8 JavaScriptCore 0x000000018e04d798 WTF::RunLoop::performWork(void*) + 36 (RunLoopCF.cpp:38) 9 CoreFoundation 0x0000000189854b88 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 (CFRunLoop.c:1943) 10 CoreFoundation 0x00000001898544d0 __CFRunLoopDoSources0 + 524 (CFRunLoop.c:1989) 11 CoreFoundation 0x00000001898520d0 __CFRunLoopRun + 804 (CFRunLoop.c:2821) 12 CoreFoundation 0x00000001897834b4 CFRunLoopRunSpecific + 292 (CFRunLoop.c:3103) 13 Foundation 0x000000018a2136fc -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 304 (NSRunLoop.m:367) 14 Foundation 0x000000018a267dec -[NSRunLoop(NSRunLoop) run] + 88 (NSRunLoop.m:389) 15 libxpc.dylib 0x0000000189539f08 _xpc_objc_main + 660 (main.m:186) 16 libxpc.dylib 0x000000018953bc00 xpc_main + 200 (init.c:1438) 17 com.apple.WebKit.WebContent 0x00000001000475e4 main + 376 (XPCServiceMain.mm:114) 18 libdyld.dylib 0x0000000189323600 start + 4
Attachments
Patch
(2.11 KB, patch)
2016-06-01 16:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-06-01 16:48:48 PDT
<
rdar://problem/26573954
>
Chris Dumez
Comment 2
2016-06-01 16:51:39 PDT
Created
attachment 280279
[details]
Patch
WebKit Commit Bot
Comment 3
2016-06-01 18:08:36 PDT
Comment on
attachment 280279
[details]
Patch Clearing flags on attachment: 280279 Committed
r201583
: <
http://trac.webkit.org/changeset/201583
>
WebKit Commit Bot
Comment 4
2016-06-01 18:08:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug