[iOS] Regression(r200972): Crash under WebKit::WebPage::selectTextWithGranularityAtPoint() https://bugs.webkit.org/show_bug.cgi?id=158284 <rdar://problem/26573954>

Reviewed by Ryosuke Niwa.

range can be null but r200972 started dereferencing it without null
check. This patch adds a null check for range and uses the pre-r200972
code path if range is null.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::selectTextWithGranularityAtPoint):


Canonical link: https://commits.webkit.org/176370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201583 268f45cc-cd09-0410-ab3c-d52691b4dbfc